--- a/src/scss/brand/components/forms/_index.scss
+++ b/src/scss/brand/components/forms/_index.scss
@@ -92,6 +92,7 @@
     font-size: 1.125rem;
     font-family: $font-normal;
     padding: 1rem 2rem 0;
+    color: $color-2;
   }
 
   .col-primary-theme {
