--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -433,7 +433,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    @include sd {
+    @include sm {
       top: 0rem;
     }
   }
@@ -816,6 +816,7 @@
   }
 }
 .location-result-wrapper {
+  display: none;
   border-top: 4px solid $color-black;
   width: calc(100% - 2rem);
   @include sm {
@@ -826,15 +827,17 @@
     padding-top: 4rem;
     padding-bottom: 2rem;
     border-bottom: 2px solid $color-black;
+    @include sm {
+      padding-top: 2rem;
+    }
     &:last-child {
       border-bottom: 4px solid $color-black;
     }
-    @include sm {
-      > .richText{
+    > .richText{
+     @include sm {
       padding-left: 4rem;
+     }
       }
-      padding-top: 2rem;
-    }
   }
 }
 .flex > div > div > div.career-search-wrapper {
