--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -821,7 +821,15 @@
   width: calc(100% - 2rem);
   @include sm {
     padding-top: 0;
+  }
+  @include sd{
     width: auto;
+  }
+  .icon-arrow-top--right{
+    text-align: left;
+    @include sm{
+      text-align: right;
+    }
   }
   .article-filter {
     padding-top: 4rem;
