--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -825,7 +825,7 @@
   @include sd{
     width: auto;
   }
-  .icon-arrow-top--right{
+  .icon-arrow--right{
     text-align: left;
     @include sm{
       text-align: right;
@@ -835,7 +835,9 @@
     padding-top: 4rem;
     padding-bottom: 2rem;
     border-bottom: 2px solid $color-black;
+    margin-top: 2rem;
     @include sm {
+      margin-top: 0rem;
       padding-top: 2rem;
     }
     &:last-child {
