--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -854,7 +854,11 @@
 .flex > div > div > div.career-search-wrapper {
   margin-right: auto !important;
 }
-
+.headquarter-area{
+ .image{
+  padding-right: 1.5rem;
+ }
+}
 /* Quaterly result filter css */
 
 .story-filter .class-filter[data-type='buttons'] .filter-list-js {
