--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -848,15 +848,17 @@
 }
 .headquarter-content {
   @include sm {
-    padding-left: 4rem;
+    padding-left: 4rem !important;
   }
 }
 .flex > div > div > div.career-search-wrapper {
   margin-right: auto !important;
 }
 .headquarter-area{
- .image{
-  padding-right: 1.5rem;
+ @include sm{
+  img{
+    padding-right: 1.5rem;
+   }
  }
 }
 /* Quaterly result filter css */
