--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -849,6 +849,9 @@
   @include sm {
     padding-left: 4rem !important;
   }
+  address{
+    font-style: normal;
+  }
 }
 .flex > div > div > div.career-search-wrapper {
   margin-right: auto !important;
