--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -446,12 +446,22 @@ a:hover {
 .richText-content {
   ul > li,
   ol > li {
+    display: flex;
+    align-items: center;
+    gap: 0.25rem;
     &::before {
       color: inherit;
+      position: relative;
+      align-items: center;
+      line-height: 1;
+      align-items: center;
     }
   }
   ul > li {
     line-height: 1;
+  }
+  ul , ol{
+    margin-bottom: 1rem;
   }
 }
 
