--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -968,19 +968,46 @@
   margin-top: 4rem;
   p {
     text-align: center;
+    margin-bottom: 0;
     span {
       display: inline-flex;
       padding: 0.5rem 1.5rem;
       justify-content: center;
       align-items: center;
       background: $color-grey-3;
-      margin: 0 0.5rem;
+      margin: 0.5rem;
     }
   }
 }
 
 .full-clickable-box:hover .bottom-right-arrow:after {
   filter: grayscale(100) contrast(100) invert(1);
+}
+
+.brand-box {
+  padding: 2rem 1.5rem 0 !important;
+  order: 1;
+  margin-top: 1rem;
+  @include sd {
+    padding: 2rem 1.5rem !important;
+    margin-top: 0;
+    order: unset;
+  }
+}
+
+.topic-cards {
+  .richText {
+    padding: 1rem 1rem 0.5rem 1rem;
+  }
+  > div {
+    height: 100% !important;
+    > div {
+      display: flex;
+      flex-direction: column;
+      align-items: baseline;
+      height: 100% !important;
+    }
+  }
 }
 
 /* Health Topic End */
