--- a/src/scss/default/components/tabs/_index.scss
+++ b/src/scss/default/components/tabs/_index.scss
@@ -23,7 +23,7 @@
     }
 
     .text-wrapper {
-      font-size: $tab-nav-item-font-size-m;
+      font-size: 12px;
       transition: 0.2s ease-in-out;
     }
 
