--- a/src/scss/brand/components/tabs/_index.scss
+++ b/src/scss/brand/components/tabs/_index.scss
@@ -601,6 +601,9 @@
   }
 }
 
+.tabs .tabs-nav-list .tabs-nav-item .text-wrapper {
+  font-size: 12px;
+}
 @media (min-width: 768px) {
   .tabs .tabs-nav {
     margin-bottom: 20px;
