--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -481,3 +481,11 @@ a:hover {
     width: 33.33% !important;
   }
 }
+.headquarter-area {
+  .border-top {
+    border-color: $color-2 !important;
+  }
+  .border-bottom {
+    border-color: $color-2 !important;
+  }
+}
