--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -486,6 +486,6 @@ a:hover {
     border-color: $color-2 !important;
   }
   .border-bottom {
-    border-color: $color-2 !important;
+    border-bottom: 2px solid $color-2 !important;
   }
 }
