--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -725,9 +725,30 @@
   justify-content: center !important;
   .image {
     border: 1px solid $color-grey-3;
+    border-left: none !important;
+    border-right: none !important;
     padding: 1rem 0.5rem;
     justify-content: center !important;
     align-items: center !important;
+    @include sm {
+      padding: 0.5rem;
+      border: 1px solid $color-grey-3;
+    }
+    @include sd {
+      padding: 1rem 0.5rem;
+    }
+    .no-bottom-border {
+      border-bottom: 1px solid;
+      @include sm {
+        border-bottom: none;
+      }
+    }
+    .no-top-border {
+      border-top: 1px solid;
+      @include sm {
+        border-top: none;
+      }
+    }
   }
   > div > div {
     justify-content: center;
