--- a/src/scss/brand/components/carousel/_index.scss
+++ b/src/scss/brand/components/carousel/_index.scss
@@ -20,6 +20,7 @@
     margin-bottom: 2.5rem;
     ul.tag-links {
       width: 80%;
+      display: flex;
       position: relative;
       top: -2.5rem;
       left: 10px;
