--- a/src/scss/brand/components/carousel/_index.scss
+++ b/src/scss/brand/components/carousel/_index.scss
@@ -19,11 +19,12 @@
     box-shadow: 0px 12px 20px -4px rgba(0, 0, 0, 0.1);
     margin-bottom: 2.5rem;
     ul.tag-links {
-      width: 80%;
+      width: 70%;
       display: flex;
       position: relative;
       top: -2.5rem;
       left: 10px;
+      flex-wrap: wrap;
       @include sm {
         left: 3px;
       }
