--- a/src/scss/brand/components/carousel/_index.scss
+++ b/src/scss/brand/components/carousel/_index.scss
@@ -35,6 +35,7 @@
         background: rgba(0, 0, 0, 0.5);
         border: none;
         color: $color-grey-3 !important;
+        margin-bottom: 0px;
       }
     }
   }
