--- a/src/scss/brand/components/forms/_index.scss
+++ b/src/scss/brand/components/forms/_index.scss
@@ -51,17 +51,15 @@
   }
 
   .privacy-checkbox {
-    display: block;
-    width: 20px;
-    position: absolute;
+    display: flex;
+    gap: 0.5rem;
+    color: #000;
+    font-size: 1.125rem;
 
     input[type='checkbox'] {
       width: 20px;
       height: 20px;
       accent-color: var(--color-primary);
-      top: -2.5rem;
-      position: absolute;
-
       &::before {
         content: '';
         position: absolute;
