--- a/src/scss/brand/components/forms/_index.scss
+++ b/src/scss/brand/components/forms/_index.scss
@@ -95,7 +95,8 @@
 
   .col-primary-theme {
     color: var(--color-primary);
-    padding: 0 0.75rem;
+    padding: 0 0rem 0 0.15rem;
+    font-weight: 700;
   }
 
   .group-form {
