--- a/src/scss/brand/components/positioned-banner-wrapper/_index.scss
+++ b/src/scss/brand/components/positioned-banner-wrapper/_index.scss
@@ -75,9 +75,12 @@
     box-shadow: 0px 16px 40px -8px #0000001a;
     background-color: #fff;
     padding: 2rem !important;
-    margin: -6rem auto 2rem;
+    margin: -3rem auto 2rem;
+    @include sm{
+      margin: -8rem auto 2rem;
+    }
     @include md {
-      margin: -6rem 3rem 2rem;
+      margin: -8rem 3rem 2rem;
       float: right;
     }
   }
