--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -103,6 +103,9 @@ body {
   .text-color-black-1 {
     color: $color-1;
   }
+  .text-color-black-2 {
+    color: $color-2;
+  }
 
   .text-color-aqua {
     color: $color-secondary-aqua;
