--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -1022,6 +1022,7 @@
   p {
     text-align: center;
     margin-bottom: 0;
+    color: $color-2;
     span {
       display: inline-flex;
       padding: 0.5rem 1.5rem;
