--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -358,6 +358,7 @@
   max-width: 100% !important;
   margin-left: 0 !important;
   padding-left: 0.75rem;
+  color:$color-black;
   @include sm {
     max-width: 80% !important;
   }
