--- a/src/scss/brand/components/search-results/_index.scss
+++ b/src/scss/brand/components/search-results/_index.scss
@@ -1,6 +1,8 @@
 .searchbox-results {
+  margin-top: 0;
+  margin-bottom: 0 !important;
   @include sm {
-    margin-top: 80px;
+    margin-bottom: 2rem !important;
   }
   .form-search {
     display: flex;
@@ -18,6 +20,7 @@
     input {
       display: block !important;
       width: 100%;
+      height: 3rem;
       padding: 1rem !important;
       background-color: $color-grey-3;
       border: none !important;
