--- a/src/scss/brand/components/tabs/_index.scss
+++ b/src/scss/brand/components/tabs/_index.scss
@@ -389,7 +389,7 @@
 
   .tabs .tabs-content {
     border: 0;
-    border-top: var(--color-1) solid 1px;
+    border-top: $color-3 solid 1px;
     padding: 1rem 0;
     z-index: 1;
     margin: 0 -1rem;
