--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -1082,7 +1082,7 @@
 }
 .visit-brand-box{
   background-color: $color-primary;
-  padding: 2rem;
+  padding: 2rem !important;
   order: 2;
   @include sm {
     order: unset;
@@ -1092,7 +1092,6 @@
     font-family: 'icomoon';
     text-align: center;
     font-size: 2.5rem;
-    background-color: $color-primary;
     position: absolute;
     right: 0px;
     bottom: 0px;
@@ -1100,7 +1099,6 @@
     line-height: 68px;
     color: #000;
     border: 2px solid;
-    border-color: $color-primary;
     @include sm{
       bottom: 2rem;
       right: 1rem;
@@ -1113,7 +1111,6 @@
     }
     &::after{
       color: $color-white;
-      background-color: $color-black;
     }
   }
 }
