--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -943,7 +943,7 @@
   .class-filter[data-type='buttons']
   .filter-list-js
   .filter-item-js {
-  margin-left: 0;
+  margin: 1px;
   margin-right: 1rem;
   max-width: fit-content;
   border-color: $color-white !important;
