--- a/src/scss/brand/components/slick-slider/_index.scss
+++ b/src/scss/brand/components/slick-slider/_index.scss
@@ -178,7 +178,7 @@
       height: 20px;
       background-color: $color-1;
       border-radius: 0;
-      padding: 0 4px !important;
+      padding: 0px !important;
       a {
         border: none !important;
       }
