--- a/src/scss/brand/components/slick-slider/_index.scss
+++ b/src/scss/brand/components/slick-slider/_index.scss
@@ -181,6 +181,9 @@
       padding: 0px !important;
       a {
         border: none !important;
+        width: inherit;
+        height: inherit;
+        border-radius: 0;
       }
       &:hover {
         a {
