--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -685,6 +685,12 @@
     border-radius: 0;
     border: none !important;
     margin-left: 1rem !important;
+    padding: 0 !important;
+    a {
+      width: inherit;
+      height: inherit;
+      border-radius: 0;
+    }
     &.active {
       width: 8px;
       height: 32px;
