--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -464,9 +464,10 @@
   width: 80%;
   margin-left: -15%;
   box-shadow: 0px 20px 56px -10px rgba(0, 0, 0, 0.15);
-  height: 100%;
+  height: 97%;
   @include sm {
     width: 65%;
+    height: 100%;
     margin-left: -30%;
   }
 }
@@ -687,9 +688,9 @@
     margin-left: 1rem !important;
     padding: 0 !important;
     a {
-      width: inherit;
-      height: inherit;
-      border-radius: 0;
+      width: inherit !important;
+      height: inherit !important;
+      border-radius: 0 !important;
     }
     &.active {
       width: 8px;
@@ -715,7 +716,7 @@
 }
 
 .half-carousel .carousel-cq .lSSlideOuter .lSSlideWrapper .lSAction a {
-  margin-top: -110px;
+  margin-top: -140px;
   @include sm {
     margin-top: -80px;
   }
@@ -1105,7 +1106,7 @@
     line-height: 68px;
     color: #000;
     border: 2px solid;
-    @include sm{
+    @include sm {
       bottom: 2rem;
       right: 1rem;
     }
