--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -881,7 +881,7 @@
   @include sd {
     width: auto;
   }
-  .text-black {
+  .more-info {
     text-align: left;
     @include sm {
       text-align: right;
@@ -1090,10 +1090,11 @@
 }
 .visit-brand-box {
   background-color: $color-primary;
-  padding: 2rem !important;
+  padding: 2rem 2rem 3rem !important;
   order: 2;
   @include sm {
-    order: unset;
+   order: unset;
+  padding: 2rem !important;
   }
   &::after {
     content: '\e909';
