--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -547,7 +547,7 @@
 
 .highlighted-content {
   position: absolute;
-  background: $color-2;
+  background: $color-1;
   left: 0;
   top: -3rem;
   z-index: 1;
@@ -578,6 +578,8 @@
         justify-content: center;
         margin-right: 5px;
         padding: 4px;
+        position: relative;
+        top: 5px;
         text-indent: 0;
       }
     }
@@ -608,12 +610,13 @@
 }
 
 .highlighted-sec-content {
-  margin: 12rem auto 5rem !important;
+  margin: 8rem auto 6rem !important;
   max-width: 100% !important;
   width: 100%;
   padding: 0.5rem 1rem;
   @include sm {
     width: 80%;
+    margin: 12rem auto 5rem !important;
   }
   @include sd {
     max-width: 860px !important;
@@ -658,7 +661,7 @@
 
 .half-carousel .lSPager {
   position: absolute;
-  bottom: -19rem;
+  bottom: -15rem;
   left: auto;
   right: 50%;
   display: flex;
@@ -1105,7 +1108,7 @@
     width: 68px;
     line-height: 68px;
     color: #000;
-    @include sm{
+    @include sm {
       bottom: 2rem;
       right: 1rem;
     }
