--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -126,7 +126,8 @@
   }
 }
 
-.full-clickable-box:focus-within {
+.full-clickable-box:focus-visible,
+.full-clickable-box:focus {
   .image {
     &:after {
       border: 2px solid $color-2;
