--- a/src/scss/brand/components/card-text-image/_index.scss
+++ b/src/scss/brand/components/card-text-image/_index.scss
@@ -23,6 +23,9 @@
       @extend .bottom-right-arrow;
     }
   }
+  .font-size--small{
+    margin-bottom: 0.5rem;
+  }
 }
 
 @media only screen and (max-width: 1279px) and (min-width: 992px) {
