--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -1098,6 +1098,8 @@
   @include sm {
     order: unset;
     padding: 2rem !important;
+    margin-left: 1rem !important;
+    margin-bottom: 2rem !important;
   }
   &::after {
     content: '\e909';
