--- a/src/scss/brand/components/slick-slider/_index.scss
+++ b/src/scss/brand/components/slick-slider/_index.scss
@@ -53,8 +53,11 @@
           display: flex;
 
           p {
-            padding: 1.5rem;
+            padding: 1rem;
             margin: 0;
+            @include sd {
+              padding: 1.5rem;
+            }
           }
 
           * {
