--- a/src/scss/brand/components/accordion/_index.scss
+++ b/src/scss/brand/components/accordion/_index.scss
@@ -47,6 +47,7 @@
           .accordion-title {
             width: 80%;
             font-size: 1.313rem;
+            line-height: 1.3;
             a {
               font-size: $font-size-18;
               font-weight: $font-semi-bold;
