--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -373,6 +373,16 @@ table {
     padding-bottom: 4rem !important;
   }
 }
+.p-d-b--3 {
+  @include sm {
+    padding-bottom: 3rem !important;
+  }
+}
+.p-d-b--2 {
+  @include sm {
+    padding-bottom: 2rem !important;
+  }
+}
 .p-d-t--4 {
   @include sm {
     padding-top: 4rem !important;
@@ -381,6 +391,40 @@ table {
 .p-d-t--5 {
   @include sm {
     padding-top: 5rem !important;
+  }
+}
+.p-d-t--3 {
+  @include sm {
+    padding-top: 3rem !important;
+  }
+}
+.p-d-t--2 {
+  @include sm {
+    padding-top: 2rem !important;
+  }
+}
+.p-d-y--3{
+  @include sm{
+  padding-top: 3rem !important;
+  padding-bottom: 3rem !important;
+  }
+}
+.p-d-y--2{
+  @include sm{
+  padding-top: 2rem !important;
+  padding-bottom: 2rem !important;
+  }
+}
+.p-d-x--3{
+  @include sm{
+  padding-right: 3rem !important;
+  padding-left: 3rem !important;
+  }
+}
+.p-d-x--2{
+  @include sm{
+  padding-right: 2rem !important;
+  padding-left: 2rem !important;
   }
 }
 
