--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -25,31 +25,39 @@
   .border-right {
     border-bottom: 2px solid $color-3;
     border-right: none;
+
     @include sm {
       border-right: 2px solid $color-3;
       border-bottom: none;
     }
   }
+
   .left-area {
     padding-right: 0;
     padding-bottom: 1rem;
+
     @include sm {
       padding-right: 4.375rem !important;
     }
   }
+
   .right-area {
     padding-left: 0;
+
     @include sm {
       padding-left: 4.375rem !important;
     }
+
     .heading {
       padding-top: 2rem;
+
       @include sm {
         padding-top: 0;
       }
     }
   }
 }
+
 .media-image {
   @extend .bottom-right-arrow;
   font-style: normal;
@@ -66,6 +74,7 @@
   transform: translateX(-50%);
   backdrop-filter: blur(32px);
   margin-bottom: -0.25rem !important;
+
   .icon-angle-down {
     width: 64px;
     height: 64px;
@@ -79,7 +88,7 @@
 
 @media only screen and (max-width: 1279px) and (min-width: 992px) {
   .card-text-image-small {
-    > .component-content > .paragraphSystem {
+    >.component-content>.paragraphSystem {
       flex-direction: column !important;
       flex-wrap: initial;
     }
@@ -88,10 +97,11 @@
 
 @media only screen and (max-width: 767px) {
   .card-text-image {
-    > .component-content > .paragraphSystem {
+    >.component-content>.paragraphSystem {
       flex-direction: column !important;
       flex-wrap: initial;
     }
+
     .bottom-pos-0 {
       position: relative !important;
     }
@@ -110,6 +120,7 @@
   overflow: hidden;
   position: relative;
   cursor: pointer;
+
   a:after {
     content: '';
     position: absolute;
@@ -119,6 +130,7 @@
     left: 0;
     z-index: 1;
   }
+
   .image {
     &:after {
       filter: grayscale(100) contrast(100) invert(1);
@@ -145,11 +157,13 @@
 
   background: #000;
   color: #fff;
+
   @include sm {
     top: 3.75rem;
     left: 1rem;
     max-width: fit-content;
   }
+
   .breadcrumbs-list {
     list-style: none;
     list-style: none;
@@ -159,8 +173,10 @@
     line-height: 35px;
     margin: 0;
     display: flex;
+
     .breadcrumb-list-item {
       margin-right: 2px;
+
       a {
         font-size: 14px;
         color: #fff;
@@ -169,28 +185,34 @@
         margin-left: 2px;
       }
     }
+
     @include sm {
       flex-wrap: wrap;
       height: auto;
     }
   }
 }
+
 .article-social-share {
   text-align: center;
+
   @include sm {
     position: absolute;
     top: 0;
     text-align: left;
     left: 1rem;
   }
+
   .reference-bp-share-icon-svg {
     margin-bottom: 1rem;
     display: inline-block;
     width: 3.25rem;
+
     @include sm {
       display: block;
       width: auto;
     }
+
     .share-icon {
       display: flex;
       width: 3rem;
@@ -201,17 +223,20 @@
     }
   }
 }
+
 .dashed-tag {
   display: flex;
   text-align: center;
   justify-content: center;
   align-items: center;
   list-style-type: none;
+
   li {
     border: 1px dashed $color-1;
     margin: 0 10px 0 0 !important;
     padding: 5px 10px !important;
     color: $color-2 !important;
+
     &::before {
       display: none !important;
     }
@@ -228,17 +253,21 @@
   @extend .font-small-12;
   text-align: center;
 }
+
 // end
 
 .numeric-list {
   list-style-type: none;
+
   li {
     display: flex !important;
     padding-top: 1.5rem !important;
     padding-left: 0rem !important;
+
     &::before {
       content: none !important;
     }
+
     span {
       margin-right: 1.5rem;
       font-size: 5rem;
@@ -252,16 +281,20 @@
   padding-left: 1.5rem !important;
   padding-right: 1.5rem !important;
   overflow: hidden;
+
   @include sm {
     overflow: visible;
   }
-  .flex.cols-d-5 > div {
+
+  .flex.cols-d-5>div {
     flex-basis: 100%;
+
     @include sm {
       flex-basis: calc(100% / 5);
       gap: 1rem;
     }
   }
+
   p {
     font-size: 18px;
   }
@@ -269,13 +302,16 @@
 
 .timeline-year {
   margin-bottom: 3rem;
+
   .heading-bg-strip {
     margin-bottom: 1rem !important;
     overflow: hidden;
+
     @include sm {
       margin-bottom: 3rem !important;
       overflow: visible;
     }
+
     span {
       display: inline-block;
       width: auto;
@@ -284,26 +320,31 @@
       border-bottom: none;
       padding-top: 10px;
       height: 44px;
+
       @include sm {
         background-color: transparent;
         border-bottom: 44px solid $color-primary;
         padding-top: 0;
         padding-bottom: 38px;
       }
+
       &:before {
         width: 10vw;
         left: -10vw;
         top: 0;
         height: 44px;
+
         @include sm {
           top: 82px;
         }
       }
+
       &:after {
         width: 100vw;
         right: -100vw;
         top: 0;
         height: 44px;
+
         @include sm {
           width: 10vw;
           right: -10vw;
@@ -312,23 +353,27 @@
       }
     }
   }
+
   &:first-of-type {
     span {
       &:before {
         width: 40vw;
         left: -40vw;
         top: 0;
+
         @include sm {
           top: 82px;
         }
       }
     }
   }
+
   &:last-of-type {
     span {
       &::after {
         width: 100vw;
         right: -100vw;
+
         @include sm {
           width: 40vw;
           right: -40vw;
@@ -336,14 +381,17 @@
       }
     }
   }
+
   &:nth-child(5) {
     span {
       border-color: $color-2 !important;
     }
   }
+
   p {
     line-height: 1.6;
     padding-right: 1rem !important;
+
     @include sm {
       padding-right: 2rem !important;
     }
@@ -359,15 +407,18 @@
   margin-left: 0 !important;
   padding-left: 0.75rem;
   color: $color-black;
+
   @include sm {
     max-width: 80% !important;
   }
 }
+
 .button-full-width {
   .btn {
     width: 100%;
     padding: 1rem 0 !important;
     margin: 0;
+
     @include sd {
       width: auto;
       padding: 10px 15px !important;
@@ -379,19 +430,24 @@
   border: 1px solid $color-secondary-lime;
   padding: 1rem !important;
   margin-bottom: 1rem !important;
+
   @include sm {
     margin-bottom: 0 !important;
   }
+
   h2 {
     @extend .giant-font;
   }
+
   p {
     @extend .font-size--small;
     @extend .font-extra-bold;
   }
+
   .display-on-hover {
     visibility: hidden;
   }
+
   * {
     color: $color-secondary-lime;
   }
@@ -400,9 +456,11 @@
 .hoverable-boxes:hover {
   background-color: $color-secondary-lime;
   color: $color-2;
+
   * {
     color: $color-2;
   }
+
   .display-on-hover {
     visibility: visible;
     font-weight: 400 !important;
@@ -411,13 +469,14 @@
 
 .efficiency-targets {
   padding-bottom: 2rem;
+
   @include sm {
     padding-bottom: 0;
   }
 }
 
 .box-with-halfcover-bg.align-left-bg {
-  > .component-content {
+  >.component-content {
     background-position: left;
   }
 }
@@ -435,6 +494,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
     @include sm {
       top: 0rem;
       left: 2rem;
@@ -448,16 +508,19 @@
   overflow: visible !important;
 }
 
-.half-carousel .carousel-wrapper > .component-content {
+.half-carousel .carousel-wrapper>.component-content {
   overflow: visible !important;
 }
+
 .half-carousel .carousel-wrapper .box.component {
   overflow: visible !important;
 }
+
 .half-carousel .carousel-slides {
   overflow: visible;
   margin-top: 3rem;
 }
+
 .half-carousel .carousel-slides .carousel-slide .carouselSlide {
   background: transparent;
   height: auto;
@@ -465,6 +528,7 @@
   margin-left: -15%;
   box-shadow: 0px 20px 56px -10px rgba(0, 0, 0, 0.15);
   height: 97%;
+
   @include sm {
     width: 65%;
     height: 100%;
@@ -513,6 +577,7 @@
     }
   }
 }
+
 .half-carousel .brand-tile .image {
   width: 60%;
 }
@@ -520,18 +585,23 @@
 .brand-carousel-content {
   width: 100%;
   padding: 2rem 1rem 1rem !important;
+
   @include sm {
     width: 40%;
     padding: 1.5rem !important;
   }
 }
-.brand-carousel-content + .image {
+
+.brand-carousel-content+.image {
   width: 100%;
+
   @include sm {
     width: 60%;
   }
-  > div {
+
+  >div {
     height: 100% !important;
+
     img {
       height: 100%;
       object-fit: cover;
@@ -555,17 +625,20 @@
   text-align: center;
   padding: 10px 0 0 0;
   z-index: 111;
+
   @include sm {
     left: 25%;
     top: -2rem;
     width: 40%;
   }
+
   p {
     color: $color-white;
     text-align: left;
     text-indent: -2rem;
     padding-left: 2rem;
     margin-left: 1rem;
+
     em.iconmoon {
       &:before {
         width: 20px;
@@ -590,20 +663,24 @@
   background: #fff;
   box-shadow: 0px 12px 20px -4px #0000001a;
   z-index: 84;
-  > div > div {
+
+  >div>div {
     flex-direction: column;
+
     @include sm {
       flex-direction: row;
     }
   }
 }
+
 /* .half-carousel .lSPager {
   display: none;
 } */
 
 .highlighted-sec-wrapper {
   margin-top: -7rem;
-  > div {
+
+  >div {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
@@ -614,28 +691,34 @@
   max-width: 100% !important;
   width: 100%;
   padding: 0.5rem 1rem;
+
   @include sm {
     width: 80%;
     margin: 12rem auto 5rem !important;
   }
+
   @include sd {
     max-width: 860px !important;
     width: 100%;
   }
+
   .bottom-right-arrow {
     &:after {
       right: 12px;
       bottom: -8px;
     }
   }
+
   p {
     text-align: left;
     padding-top: 1.2rem;
     width: 80%;
+
     @include sd {
       width: 100%;
     }
   }
+
   &.full-clickable-box:hover {
     .richText {
       &:after {
@@ -647,12 +730,15 @@
 
 .our-brands-title {
   width: 60%;
+
   @include sd {
     width: 100%;
   }
 }
+
 .half-carousel .bottom-pos-0 {
   position: relative;
+
   @include sd {
     position: absolute;
     bottom: 12px;
@@ -668,20 +754,25 @@
   justify-content: space-between;
   align-items: center;
   width: auto;
+
   @media screen and (min-width: 710px) {
     bottom: -17rem;
   }
+
   @include sm {
     bottom: -11rem;
     right: 0;
   }
+
   @include sd {
     bottom: -8.75rem;
     right: -2rem;
   }
+
   @include md {
     right: 0;
   }
+
   li {
     width: 4px;
     height: 20px;
@@ -690,26 +781,32 @@
     border: none !important;
     margin-left: 1rem !important;
     padding: 0 !important;
+
     a {
       width: inherit !important;
       height: inherit !important;
       border-radius: 0 !important;
     }
+
     &.active {
       width: 8px;
       height: 32px;
       background-color: #000;
+
       a {
         border: none !important;
         background-color: transparent !important;
       }
     }
+
     a {
       border: none !important;
+
       &:hover {
         background-color: transparent;
       }
     }
+
     &:hover {
       a {
         background-color: transparent !important;
@@ -720,6 +817,7 @@
 
 .half-carousel .carousel-cq .lSSlideOuter .lSSlideWrapper .lSAction a {
   margin-top: -140px;
+
   @include sm {
     margin-top: -80px;
   }
@@ -731,20 +829,24 @@
       margin-left: 1rem;
       color: $color-primary;
     }
+
     &:hover {
       .icon-angle-right {
         color: $color-2;
       }
     }
   }
+
   &:before {
     display: none;
+
     @include sm {
       display: block;
       content: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/brands-measure.png');
       position: absolute;
       left: -5rem;
       top: -4rem;
+
       @include sd {
         left: -2rem;
       }
@@ -754,6 +856,7 @@
 
 .logo-wrapper {
   justify-content: center !important;
+
   .image {
     border: 1px solid $color-grey-3;
     border-left: none;
@@ -761,23 +864,28 @@
     padding: 1rem 0.5rem;
     justify-content: center !important;
     align-items: center !important;
+
     @include sm {
       padding: 0.5rem;
       border: 1px solid $color-grey-3;
     }
+
     @include sd {
       padding: 1rem 0.5rem;
     }
+
     &.border-m-top-bot {
       border-top: 1px solid $color-grey-3 !important;
       border-bottom: 1px solid $color-grey-3 !important;
+
       @include sm {
         border-top: none !important;
         border-bottom: none !important;
       }
     }
   }
-  > div > div {
+
+  >div>div {
     justify-content: center;
   }
 }
@@ -785,12 +893,15 @@
 .no-top-border {
   border-top: none !important;
 }
+
 .no-bottom-border {
   border-bottom: none !important;
 }
+
 .no-right-border {
   border-right: none !important;
 }
+
 .no-left-border {
   border-left: none !important;
 }
@@ -807,6 +918,7 @@
     position: absolute;
     left: 0;
     text-align: center;
+
     @include sm {
       left: -4rem;
     }
@@ -817,14 +929,17 @@
   content: '\e912';
   @extend .bg-sky;
 }
+
 .other-contrast-icon::before {
   content: '\e90f';
   @extend .bg-sky;
 }
+
 .other-alert-icon::before {
   content: '\e900';
   @extend .bg-sky;
 }
+
 .tick-icon::before {
   content: '\e90c';
   @extend .bg-sky;
@@ -841,27 +956,34 @@
       height: 100%;
     }
   }
+
   .opportunity-sec {
     @include sm {
       padding-left: 6rem;
     }
+
     @include sm {
       padding-left: 3rem;
     }
+
     @include lg {
       padding-left: 0rem;
     }
+
     .heading {
       @include sd {
         font-size: 2.5rem;
       }
+
       @include lg {
         font-size: 4.5rem;
       }
     }
   }
+
   .aqua-content {
     padding-left: 4rem !important;
+
     @include sm {
       padding-left: 0rem !important;
     }
@@ -870,71 +992,91 @@
 
 .aqua-content {
   padding-left: 4rem !important;
+
   @include sm {
     padding-left: 0rem !important;
   }
 }
+
 .location-result-wrapper {
   display: none;
   border-top: 4px solid $color-black;
   width: calc(100% - 2rem);
+
   @include sm {
     padding-top: 0;
   }
+
   @include sd {
     width: auto;
   }
+
   .more-info {
     text-align: left;
+
     @include sm {
       text-align: right;
     }
+
     color: $color-black !important;
   }
+
   .icon-arrow-top--right {
     text-align: left;
+
     @include sm {
       text-align: right;
     }
   }
+
   .article-filter {
     padding-top: 4rem;
     padding-bottom: 2rem;
     border-bottom: 2px solid $color-black;
     margin-top: 2rem;
+
     @include sm {
       margin-top: 0rem;
       padding-top: 2rem;
     }
+
     &:last-child {
       border-bottom: 4px solid $color-black;
     }
   }
 }
+
 .headquarter-content {
   @include sm {
     padding-left: 7rem !important;
   }
+
   address {
     font-style: normal;
   }
 }
-.flex > div > div > div.career-search-wrapper {
+
+.flex>div>div>div.career-search-wrapper {
   margin-right: auto !important;
 }
+
 .headquarter-area {
   margin-bottom: 4rem;
   padding: 1rem;
+
   @include sd {
     margin-bottom: 5rem;
     padding: 0 1rem;
   }
+
   .headquarter-content {
     margin-top: 5rem;
+
     @include sm {
       margin-top: 0;
     }
   }
+
   @include sm {
     img {
       padding-right: 1.5rem;
@@ -950,10 +1092,7 @@
   overflow-y: auto;
 }
 
-.story-filter
-  .class-filter[data-type='buttons']
-  .filter-list-js
-  .filter-item-js {
+.story-filter .class-filter[data-type='buttons'] .filter-list-js .filter-item-js {
   margin: 1px;
   margin-right: 1rem;
   max-width: fit-content;
@@ -962,14 +1101,9 @@
   background-color: $color-white !important;
   color: $color-2 !important;
 }
-.story-filter
-  .theme-1.class-filter[data-type='buttons']
-  .filter-list-js
-  .filter-item-js.active-js,
-.story-filter
-  .theme-1.class-filter[data-type='buttons']
-  .filter-list-js
-  .filter-item-js:hover {
+
+.story-filter .theme-1.class-filter[data-type='buttons'] .filter-list-js .filter-item-js.active-js,
+.story-filter .theme-1.class-filter[data-type='buttons'] .filter-list-js .filter-item-js:hover {
   background-color: #47ffe5 !important;
   color: $color-2 !important;
   border-color: #47ffe5 !important;
@@ -980,31 +1114,39 @@
   .class-filter[data-type-mobile='dropdown'] {
     margin: 0;
     max-width: 180px;
+
     .filter-container-js {
       &.opened-js {
         background-color: $color-white;
       }
+
       .selected-item-js {
         background-color: $color-white !important;
         border: 0px;
         padding: 0.25rem 1rem;
         text-align: left;
+
         &:hover {
           background-color: $color-white;
         }
       }
+
       &:focus-within {
         .selected-item-js {
           background-color: $color-white;
         }
       }
     }
+
     .filter-list-js {
+      max-width: 320px !important;
+      width: 300px;
       .filter-item-js {
         padding: 0.25rem 1rem !important;
         text-align: left;
         background-color: $color-white;
         border: none;
+
         .active-js {
           background-color: $color-white;
           color: $color-black;
@@ -1013,13 +1155,24 @@
       }
     }
   }
+  .class-filter[data-type='dropdown'] {
+    .filter-container-js{
+      .selected-item-js::before{
+        right: 0;
+      }
+      .selected-item-js::after{
+        right: 0;
+      }
+    }
+  }
 }
 
 /* Health Topic */
 
-.health-topic-tag + .health-topic-tag {
+.health-topic-tag+.health-topic-tag {
   margin-top: 0.25rem;
   margin-bottom: 1.5rem;
+
   @include sm {
     margin-top: 0;
     margin-bottom: 0;
@@ -1028,13 +1181,16 @@
 
 .signs-to-look {
   margin-top: 1rem;
+
   @include sm {
     margin-top: 4rem;
   }
+
   p {
     text-align: center;
     margin-bottom: 0;
     color: $color-2;
+
     span {
       display: inline-flex;
       padding: 0.5rem 1.5rem;
@@ -1054,6 +1210,7 @@
   padding: 2rem 1.5rem 0 !important;
   order: 1;
   margin-top: 2.5rem;
+
   @include sd {
     padding: 2rem 1.5rem !important;
     margin-top: 0;
@@ -1063,15 +1220,19 @@
 
 .topic-cards {
   margin-bottom: 1rem !important;
+
   @include sm {
     margin-bottom: 0 !important;
   }
+
   .richText {
     padding: 1rem;
   }
-  > div {
+
+  >div {
     height: 100% !important;
-    > div {
+
+    >div {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -1091,16 +1252,19 @@
     margin-right: 0.5rem;
   }
 }
+
 .visit-brand-box {
   background-color: $color-primary;
   padding: 2rem 2rem 3rem !important;
   order: 2;
+
   @include sm {
     order: unset;
     padding: 2rem !important;
     margin-left: 1rem !important;
     margin-bottom: 2rem !important;
   }
+
   &::after {
     content: '\e909';
     font-family: 'icomoon';
@@ -1112,16 +1276,20 @@
     width: 68px;
     line-height: 68px;
     color: #000;
+
     @include sm {
       bottom: 2rem;
       right: 1rem;
     }
   }
+
   &:hover {
     background-color: $color-black;
+
     h2 {
       color: $color-white;
     }
+
     &::after {
       color: $color-white;
     }
@@ -1136,20 +1304,23 @@
 
 ‌.css-comma:after {
   content: "\002C";
-  }
-  .operate-filter-article-section .class-filter[data-type-mobile='dropdown'] {
+}
+
+.operate-filter-article-section .class-filter[data-type-mobile='dropdown'] {
   margin: 0;
   max-width: 320px;
   width: 100%;
-  }
-  .operate-filter-article-section .class-filter[data-type-mobile='dropdown'] .filter-container-js .selected-item-js {
-  padding: 0.25rem 0;
-  }
-  @media only screen and (min-width: 768px) {
-  .operate-filter-article-section .class-filter[data-type-mobile='dropdown'] .filter-container-js .selected-item-js {
-  padding: 0.25rem 1rem;
-  }
-  }
+}
 
-  
+.operate-filter-article-section .class-filter[data-type-mobile='dropdown'] .filter-container-js .selected-item-js {
+  padding: 0.25rem 0;
+}
+
+@media only screen and (min-width: 768px) {
+  .operate-filter-article-section .class-filter[data-type-mobile='dropdown'] .filter-container-js .selected-item-js {
+    padding: 0.25rem 1rem;
+  }
+}
+
+
 // add comma's in dropdown end
