--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -88,7 +88,7 @@
 
 @media only screen and (max-width: 1279px) and (min-width: 992px) {
   .card-text-image-small {
-    >.component-content>.paragraphSystem {
+    > .component-content > .paragraphSystem {
       flex-direction: column !important;
       flex-wrap: initial;
     }
@@ -97,7 +97,7 @@
 
 @media only screen and (max-width: 767px) {
   .card-text-image {
-    >.component-content>.paragraphSystem {
+    > .component-content > .paragraphSystem {
       flex-direction: column !important;
       flex-wrap: initial;
     }
@@ -282,7 +282,7 @@
     overflow: visible;
   }
 
-  .flex.cols-d-5>div {
+  .flex.cols-d-5 > div {
     flex-basis: 100%;
 
     @include sm {
@@ -472,7 +472,7 @@
 }
 
 .box-with-halfcover-bg.align-left-bg {
-  >.component-content {
+  > .component-content {
     background-position: left;
   }
 }
@@ -504,7 +504,7 @@
   overflow: visible !important;
 }
 
-.half-carousel .carousel-wrapper>.component-content {
+.half-carousel .carousel-wrapper > .component-content {
   overflow: visible !important;
 }
 
@@ -588,14 +588,14 @@
   }
 }
 
-.brand-carousel-content+.image {
+.brand-carousel-content + .image {
   width: 100%;
 
   @include sm {
     width: 60%;
   }
 
-  >div {
+  > div {
     height: 100% !important;
 
     img {
@@ -661,7 +661,7 @@
   box-shadow: 0px 12px 20px -4px #0000001a;
   z-index: 84;
 
-  >div>div {
+  > div > div {
     flex-direction: column;
 
     @include sm {
@@ -677,7 +677,7 @@
 .highlighted-sec-wrapper {
   margin-top: -7rem;
 
-  >div {
+  > div {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
@@ -886,7 +886,7 @@
     }
   }
 
-  >div>div {
+  > div > div {
     justify-content: center;
   }
 }
@@ -1057,7 +1057,7 @@
   }
 }
 
-.flex>div>div>div.career-search-wrapper {
+.flex > div > div > div.career-search-wrapper {
   margin-right: auto !important;
 }
 
@@ -1093,7 +1093,10 @@
   overflow-y: auto;
 }
 
-.story-filter .class-filter[data-type='buttons'] .filter-list-js .filter-item-js {
+.story-filter
+  .class-filter[data-type='buttons']
+  .filter-list-js
+  .filter-item-js {
   margin: 1px;
   margin-right: 1rem;
   max-width: fit-content;
@@ -1103,8 +1106,14 @@
   color: $color-2 !important;
 }
 
-.story-filter .theme-1.class-filter[data-type='buttons'] .filter-list-js .filter-item-js.active-js,
-.story-filter .theme-1.class-filter[data-type='buttons'] .filter-list-js .filter-item-js:hover {
+.story-filter
+  .theme-1.class-filter[data-type='buttons']
+  .filter-list-js
+  .filter-item-js.active-js,
+.story-filter
+  .theme-1.class-filter[data-type='buttons']
+  .filter-list-js
+  .filter-item-js:hover {
   background-color: #47ffe5 !important;
   color: $color-2 !important;
   border-color: #47ffe5 !important;
@@ -1157,11 +1166,11 @@
     }
   }
   .class-filter[data-type='dropdown'] {
-    .filter-container-js{
-      .selected-item-js::before{
+    .filter-container-js {
+      .selected-item-js::before {
         right: 0;
       }
-      .selected-item-js::after{
+      .selected-item-js::after {
         right: 0;
       }
     }
@@ -1170,7 +1179,7 @@
 
 /* Health Topic */
 
-.health-topic-tag+.health-topic-tag {
+.health-topic-tag + .health-topic-tag {
   margin-top: 0.25rem;
   margin-bottom: 1.5rem;
 
@@ -1230,10 +1239,10 @@
     padding: 1rem;
   }
 
-  >div {
+  > div {
     height: 100% !important;
 
-    >div {
+    > div {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -1304,7 +1313,7 @@
 // add comma's in dropdown start
 
 ‌.css-comma:after {
-  content: "\002C";
+  content: '\002C';
 }
 
 .operate-filter-article-section .class-filter[data-type-mobile='dropdown'] {
@@ -1313,15 +1322,20 @@
   width: 100%;
 }
 
-.operate-filter-article-section .class-filter[data-type-mobile='dropdown'] .filter-container-js .selected-item-js {
+.operate-filter-article-section
+  .class-filter[data-type-mobile='dropdown']
+  .filter-container-js
+  .selected-item-js {
   padding: 0.25rem 0;
 }
 
 @media only screen and (min-width: 768px) {
-  .operate-filter-article-section .class-filter[data-type-mobile='dropdown'] .filter-container-js .selected-item-js {
+  .operate-filter-article-section
+    .class-filter[data-type-mobile='dropdown']
+    .filter-container-js
+    .selected-item-js {
     padding: 0.25rem 1rem;
   }
 }
-
 
 // add comma's in dropdown end
