--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -324,7 +324,7 @@ header {
   }
   .megamenu-search {
     @media (min-width: $breakpoint-xl-min) {
-      right: -0.5rem !important;
+      right: -17px !important;
       top: -6px !important;
       max-width: 8% !important;
     }
@@ -435,7 +435,7 @@ header {
           background-image: url('/content/dam/cf-consumer-healthcare/bp-haleon/en_US/global/icons/search-line.svg');
         }
         @include sd {
-          top: 8px !important;
+          top: 7px !important;
           &:focus:focus-visible {
             outline: none !important;
           }
@@ -461,7 +461,7 @@ header {
           content: 'Search';
           position: absolute;
           left: -48px;
-          top: 2px;
+          top: 3px;
           font-size: $font-size-13;
           color: $color-black;
           font-family: $font-family-default;
@@ -475,13 +475,13 @@ header {
         &::after {
           content: '';
           position: absolute;
-          left: -58px;
+          left: -52px;
           right: 0;
           top: -3px;
-          height: 26px;
+          height: 24px;
           background-color: $color-primary;
           color: #000;
-          width: 78px;
+          width: 76px;
           z-index: -1;
           display: none;
         }
@@ -532,7 +532,7 @@ header {
     }
     @media (min-width: $breakpoint-xl-min) {
       max-width: 17%;
-      margin-left: 12%;
+      margin-left: 11%;
     }
     @media (min-width: 1920px) {
       margin-left: 14%;
